[gd_scene load_steps=7 format=3 uid="uid://d1w2dacub23qm"]

[ext_resource type="Script" uid="uid://sd6hu43ykgmv" path="res://scenes/enemies/slime.gd" id="1_l64mu"]
[ext_resource type="Texture2D" uid="uid://dvsckouf3ra5i" path="res://sprites/slime.png" id="1_sa3ta"]
[ext_resource type="Texture2D" uid="uid://bgotlakny5st4" path="res://sprites/slime2.png" id="3_i4viq"]
[ext_resource type="SpriteFrames" uid="uid://c6hnb7kyiih2o" path="res://scenes/enemies/emotion.tres" id="4_qgqtk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c27wr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_sa3ta")
}, {
"duration": 1.0,
"texture": ExtResource("3_i4viq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0qd6c"]
radius = 24.0208

[node name="Slime" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_l64mu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c27wr")
autoplay = "default"
frame_progress = 0.0809831

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_0qd6c")

[node name="DeModulate" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="Emotion" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -43)
scale = Vector2(1.3, 1.3)
sprite_frames = ExtResource("4_qgqtk")
animation = &"alert"
autoplay = "normal"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DeModulate" to="." method="_on_de_modulate_timeout"]
